Remove dead link

--- a/content/pages/changelog/2019.md
+++ b/content/pages/changelog/2019.md
@@ -231,7 +231,7 @@ Impacted developers will have been notified through multiple channels over the
 last 6-12 months, but should your application be impacted you will need to
 update your systems to again be able to make API requests to Box.
 
-Please see our [TLS 1.0 deprecation guide](page://changelog/tls-1.1) to
+Please see our TLS 1.0 deprecation guide to
 upgrade your systems to TLS 1.2.
 
 For any questions or for addition support, please
